--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -30,7 +30,7 @@
   flex-direction: column;
   border-radius: 8px;
   margin: 0 15px;
-  row-gap: 10px;
+  row-gap: 15px;
   padding: 15px 0 100px 0;
   height: auto;
 }
@@ -51,6 +51,7 @@
   border-radius: 10px;
   gap: 14px;
   background-color: rgb(238, 238, 238);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .cartSection td {
