--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -27,24 +27,17 @@
   display: flex;
   width: 100%;
   flex-direction: column;
-  height: 100%;
+  height: auto;
   overflow: auto;
 }
 
 .cartSection tbody {
-  display: flex;
-  flex-direction: column;
-  border-radius: 8px;
-  margin: 0 15px;
-  row-gap: 15px;
-  padding: 15px 0 100px 0;
-  height: auto;
-}
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  padding: 15px 0 29px 0;
+  margin: 0 21px;
+  gap: 15px;
 
-@media screen and (min-width: 768px) {
-  .cartSection tbody {
-    padding: 15px 0 25px 0;
-  }
 }
 
 .cartSection tr {
@@ -91,12 +84,35 @@
   font-weight: 700;
 }
 
-.footerSection {
+
+.cartBtnCont {
   display: flex;
-  gap: 10px;
-  position: sticky;
-  bottom: 0;
-  padding: 20px 15px;
-  background-color: var(--color-body);
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 15px;
+}
+
+.cartBtnCont button {
+  
+
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-weight: 500;
+  border: 1px solid transparent;
+  border-radius: 2px;
+  height: 36px;
+  line-height: 34px;
+  font-size: 14px;
+  color: #ffffff;
+  background-color: var(--color-bck);
+  transition: background-color 0.2s ease-in-out 0s, opacity 0.2s ease-in-out 0s;
+  padding: 0 18px;
+  border-radius: 8px;
+}
+
+.cartBtnCont button:hover {
+  color: #ffffff;
+  opacity: 0.9;
 }
