--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -91,6 +91,32 @@
   font-weight: 700;
 }
 
+.tprCotainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  padding: 15px 0 29px 0;
+  margin: 0 21px;
+  gap: 15px;
+}
+
+.tprBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  row-gap: 7px;
+}
+
+.tprDiv {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding-bottom: 3px;
+  border-bottom-style: dashed;
+  border-bottom-width: 1px;
+  border-bottom-color:  rgb(187, 187, 187);
+}
 
 .cartBtnCont {
   display: flex;
@@ -101,8 +127,6 @@
 }
 
 .cartBtnCont button {
-  
-
   display: inline-block;
   outline: none;
   cursor: pointer;
