--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -94,9 +94,11 @@
 .tprCotainer {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  padding: 15px 0 29px 0;
+  padding: 15px 0 15px 0;
   margin: 0 21px;
   gap: 15px;
+  background-color: rgb(238, 238, 238);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .tprBox {
@@ -123,24 +125,29 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  row-gap: 15px;
+  row-gap: 25px;
 }
 
 .cartBtnCont button {
   display: inline-block;
   outline: none;
   cursor: pointer;
-  font-weight: 500;
+  font-weight: 600;
   border: 1px solid transparent;
-  border-radius: 2px;
-  height: 36px;
+  border-radius: 50px;
+  height: 50px;
   line-height: 34px;
-  font-size: 14px;
+  font-size: 15px;
   color: #ffffff;
   background-color: var(--color-bck);
   transition: background-color 0.2s ease-in-out 0s, opacity 0.2s ease-in-out 0s;
-  padding: 0 18px;
-  border-radius: 8px;
+  padding: 0 98px;
+}
+
+.cartBtnCont a {
+  color: black;
+  text-decoration: underline;
+
 }
 
 .cartBtnCont button:hover {
