--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -123,7 +123,7 @@
   font-weight: 600;
   border: 1px solid transparent;
   border-radius: 50px;
-  height: 50px;
+  height: 45px;
   line-height: 34px;
   font-size: 15px;
   color: #ffffff;
@@ -133,9 +133,9 @@
 }
 
 .cartBtnCont a {
-  color: black;
-  text-decoration: underline;
-
+  color: var(--color-fonts);
+  padding: 13px 25px;
+  cursor: pointer;
 }
 
 .cartBtnCont button:hover {
