--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -167,6 +167,10 @@
   justify-content: center;
   align-items: center;
   padding: 15px;
+  background-color: var(--color-bck);
+  color: #fff;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .close-modal-btn {
@@ -195,7 +199,6 @@
   line-height: 1.75rem;
   font-weight: 600;
   text-align: center;
-  color: #000;
 }
 
 form {
