--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -368,12 +368,13 @@ form {
   width: 100%;
   flex-direction: column;
   row-gap: 15px;
+  font-family: var(--font-default);
 }
 
 .FilterSection tbody tr {
   display: flex;
   align-items: start;
-  padding: 14px 10px;
+  padding: 12px 10px;
   border-bottom-style: solid;
   justify-content: space-between;
   border-bottom-width: 1px;
