--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -383,7 +383,7 @@ form {
 
 .FilterSection th {
   display: inline;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   color: brown;
   font-weight: 700;
 }
@@ -394,5 +394,24 @@ form {
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
-# 
+# Product Modal section Styling
+--------------------------------------------------------------*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*--------------------------------------------------------------
+# End of  Product Modal section Styling
 --------------------------------------------------------------*/
