--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -41,11 +41,11 @@
 --------------------------------------------------------------*/
 
 .modal1 {
-  width: 90vw;
+  width: 95vw;
   max-width: 500px;
   bottom: 0;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, 100%);
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
@@ -57,13 +57,12 @@
 }
 
 /* User Modal Animation */
-
 @keyframes slideIn {
   from {
-    top: 100%;
+    transform: translate(-50%, 100%);
   }
   to {
-    top: 50%;
+    transform: translate(-50%, 0%);
   }
 }
 
@@ -81,7 +80,8 @@
   flex-direction: column;
   width: 100%;
   padding: 25px 0;
-  height: 100%;
+  height: auto;
+  max-height: 75vh;
 }
 
 /*--------------------------------------------------------------
