--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -79,7 +79,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 25px 0;
   height: auto;
   max-height: 75vh;
 }
@@ -397,8 +396,26 @@ form {
 # Product Modal section Styling
 --------------------------------------------------------------*/
 
+.product-form-container {
+  display: flex;
+  align-items: center;
+  padding: 0px 25px;
+}
+
+.product-form-container img {
+  width: 80%;
+  height: 100%;
+  max-height: 230px;
+  object-fit: cover;
+}
 
 
+.product-form-group{
+  display: flex;
+  width: 100%;
+  height: 550px;
+  background-color: rgb(231, 231, 231);
+}
 
 
 
