--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -399,21 +399,24 @@ form {
 .product-form-container {
   display: flex;
   align-items: center;
-  padding: 0px 25px;
+  padding: 0px 25px 15px 25px;
+  overflow: auto;
 }
 
 .product-form-container img {
-  width: 80%;
+  width: 100%;
   height: 100%;
   max-height: 230px;
   object-fit: cover;
+  padding: 25px;
+  border-radius: 35px;
 }
 
 
 .product-form-group{
   display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 550px;
   background-color: rgb(231, 231, 231);
 }
 
