--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -401,6 +401,7 @@ form {
   align-items: center;
   padding: 0px 25px 15px 25px;
   overflow: auto;
+  row-gap: 15px;
 }
 
 .product-form-container img {
@@ -412,14 +413,29 @@ form {
   border-radius: 35px;
 }
 
-
-.product-form-group{
+.product-form-group {
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: rgb(231, 231, 231);
+  height: 250px;
+  row-gap: 14px;
 }
 
+.product-form-group h3 {
+  text-align: center;
+  font-size: 1.3rem;
+  font-weight: 700;
+  color: #000;
+  margin-bottom: 25px;
+}
+
+.product-form-group .space-btw {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 1.1rem;
+  font-weight: 500;
+}
 
 
 
