--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -440,7 +440,7 @@ form {
   padding: 5px 0px;
   border-bottom-style: dashed;
   border-bottom-width: 1px;
-  border-bottom-color: #b6b6b6;
+  border-bottom-color: #d7d7d7;
 }
 
 
