--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -438,7 +438,7 @@ form {
 
 .space-btw {
   padding: 5px 0px;
-  border-bottom-style: dashed;
+  border-bottom-style: solid;
   border-bottom-width: 1px;
   border-bottom-color: #d7d7d7;
 }
