--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -366,6 +366,7 @@ form {
   display: flex;
   flex-wrap: wrap;
   row-gap: 15px;
+  margin: 25px 0;
   justify-content: center;
   column-gap: 5px;
 }
