--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -387,7 +387,8 @@ form {
 
 .Productnavbox {
   position: absolute;
-  bottom: 10px;
+  bottom: 0;
+  padding-bottom: 10px;
   background-color: var(--color-font);
 }
 
