--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -397,7 +397,7 @@ form {
   justify-content: space-between;
   align-items: center;
   column-gap: 15px;
-  padding: 15px;
+  padding: 15px 25px 15px 25px;
 }
 
 .visible {
