--- a/styles/header.css
+++ b/styles/header.css
@@ -52,6 +52,10 @@ header button {
   height: 45px;
 }
 
+.open-modal-btn {
+  cursor: pointer;
+}
+
 .logoBox img {
   width: 100%;
   height: 100%;
