--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -186,6 +186,7 @@ main {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    min-height: 32px;
     text-overflow: ellipsis;
 }
 
