--- a/styles/header.css
+++ b/styles/header.css
@@ -66,7 +66,7 @@ header button {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   padding: 15px;
   column-gap: 10px;
   color: white;
