--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -397,6 +397,7 @@ form {
   position: absolute;
   bottom: 0;
   padding-bottom: 10px;
+  padding: 15px 25px 15px 25px;
   background-color: var(--color-font);
 }
 
@@ -405,7 +406,7 @@ form {
   justify-content: space-between;
   align-items: center;
   column-gap: 15px;
-  padding: 15px 25px 15px 25px;
+  
 }
 
 .visible {
@@ -451,6 +452,7 @@ form {
   align-items: center;
   padding: 25px 25px 95px 25px;
   overflow: auto;
+  position: relative;
   row-gap: 15px;
 }
 
