--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -30,6 +30,7 @@
   position: fixed;
   background-color: #fff;
   z-index: 2;
+  touch-action: manipulation;
 }
 
 /*--------------------------------------------------------------
