--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -1,28 +1,35 @@
 footer {
-  text-align: center;
-  background-color: #f9f9f9;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 10px;
+  background-color: #ffffff;
   padding: 20px 10px 40px 10px;
   color: #333;
 }
 
-.payment-methods p {
-  font-size: 1.1em;
-  font-weight: bold;
-  margin-bottom: 10px;
+.logoContainer a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 80px;
+  margin-bottom: 15px;
+  cursor: pointer;
 }
 
-.logos {
-  margin-bottom: 20px;
-}
-
-.logo {
-  width: 60px; /* Adjust as needed */
-  margin: 0 5px;
+.logoContainer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .terms-privacy {
   background-color: #eaeaea;
   padding: 10px;
+  width: 100%;
+  text-align: center;
+  border-radius: 5px;
 }
 
 .terms-privacy a {
