--- a/src/components/styles/mainSection.css
+++ b/src/components/styles/mainSection.css
@@ -155,7 +155,7 @@ main {
     height: 20px;
     position: absolute;
     bottom: 8px;
-    left: 8px;
+    right: 8px;
     object-fit: fill;
     border-radius: 3px;
 }
@@ -216,8 +216,8 @@ main {
     font-weight: bold;
     border-radius: 5px;
     position: absolute;
-    bottom: 10px;
-    right: 10px;
+    top: 10px;
+    left: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); /* larger drop shadow */
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* text shadow for better readability */
 }
