--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -457,7 +457,7 @@ form {
   row-gap: 15px;
 }
 
-.product-form-container img {
+.product-form-container .productImg {
   width: 100%;
   height: 100%;
   max-height: 230px;
