--- a/src/utilities/input.css
+++ b/src/utilities/input.css
@@ -1,6 +1,7 @@
 /*--------------------------------------------------------------
 # General Styling
 --------------------------------------------------------------*/
+
 /* Container styling */
 .input-g-container {
   display: flex;
@@ -19,7 +20,8 @@
 }
 
 /* Base Input Styling */
-.input-style {
+.input-style,
+select.input-style {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -33,14 +35,32 @@
   outline: none; /* Disable default outline */
 }
 
+/* Dropdown Customization */
+select.input-style {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>');
+  background-repeat: no-repeat;
+  background-position: right 12px center;
+  background-size: 16px;
+  padding-right: 35px; /* Space for the arrow */
+}
+
 /* Focus State */
-.input-style:focus {
+.input-style:focus,
+select.input-style:focus {
   border-color: var(--color-button);
+  box-shadow: none; /* Remove heavy effects */
+}
+
+/* Remove focus styling instantly on click */
+select.input-style:active {
+  outline: none;
+  box-shadow: none;
 }
 
 /* Responsive Styling */
 @media (max-width: 600px) {
-  .input-style {
+  .input-style,
+  select.input-style {
     font-size: 14px;
     padding: 10px;
   }
