--- a/src/utilities/input.css
+++ b/src/utilities/input.css
@@ -23,7 +23,7 @@
 .input-style,
 select.input-style {
   width: 100%;
-  padding: 12px;
+  padding: 11px;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 1rem;
@@ -31,8 +31,8 @@ select.input-style {
   color: #333;
   background-color: #fff;
   box-sizing: border-box;
-  appearance: none; /* Remove default styles */
-  outline: none; /* Disable default outline */
+  appearance: none; 
+  outline: none;
 }
 
 /* Focus State */
