--- a/src/components/styles/mainSection.css
+++ b/src/components/styles/mainSection.css
@@ -107,11 +107,11 @@ main {
 
 .cat-profile {
     display: flex;
-    min-width: 50px;
-    max-width: 50px;
+    min-width: 65px;
+    max-width: 65px;
     align-items: center;
     justify-content: center;
-    height: 50px;
+    height: 60px;
     border: solid 1px rgb(198, 67, 93);
     padding: 2px;
     border-radius: 15px;
@@ -121,6 +121,7 @@ main {
 .cat-profile img {
     display: block;
     width: 100%;
+    object-fit: fill;
     height: 100%;
     border-radius: 15px;
 }
