--- a/src/components/styles/mainSection.css
+++ b/src/components/styles/mainSection.css
@@ -185,6 +185,11 @@ main {
     border-radius: 3px;
 }
 
+.storeContainer {
+    width: 40px;
+    height: 30px;
+}
+
 .product-card .productImage {
     width: 100%;
     min-height: 173.25px;
@@ -234,7 +239,7 @@ main {
 }
 
 .discount-label {
-    background: linear-gradient(to right, rgb(198, 67, 93), rgb(198, 67, 93)); /* gradient background */
+    background: linear-gradient(to right, rgb(198, 67, 93), rgb(198, 67, 93)); 
     color: white;
     padding: 3px 8px;
     font-size: 0.8em;
@@ -243,6 +248,22 @@ main {
     position: absolute;
     top: 10px;
     left: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); /* larger drop shadow */
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* text shadow for better readability */
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); 
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); 
+}
+
+.product-store-container {
+    position: absolute;
+    width: 30px;
+    bottom: 10px;
+    left:10px;
+    height: 30px;
+    
+}
+
+.product-store-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    border-radius: 50%;
 }
