--- a/src/components/styles/shopping-cart.css
+++ b/src/components/styles/shopping-cart.css
@@ -40,7 +40,7 @@
 
 .cartSection tr {
   display: grid;
-  padding: 10px;
+  padding: 20px 10px 10px 10px;
   grid-template-columns: auto 3fr;
   grid-template-rows: 1fr;
   height: auto;
@@ -64,6 +64,19 @@
   border-radius: 10px;
 }
 
+.prodBox {
+  position: relative;
+}
+
+.cartStoreImg img {
+  position: absolute;
+  top: -20px;
+  left: -5px;
+  width: 30px;
+  height: 30px;
+
+}
+
 .cartSection .infBox {
   display: flex;
   flex-direction: column;
@@ -82,6 +95,58 @@
   font-weight: 700;
 }
 
+.cartCheckbx {
+  display: flex;
+  align-items: center;
+
+column-gap: 8px;  position: absolute;
+  font-size: 14px;
+  top: 15px;
+  right: 15px;
+}
+
+.textcartContainer {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  margin: 8px 21px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.textcartArea {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.textcartArea label {
+  font-size: 0.9rem;
+  font-weight: 700;
+  padding-bottom: 3px;
+  padding-left: 2px;
+} 
+
+.textcartArea p {
+  font-size: 0.9rem;
+  font-weight: 500;
+  padding-bottom: 3px;
+  padding-left: 2px;
+  color: #616161;
+}
+
+.textcartArea textarea {
+  resize: none;
+  padding: 10px;
+  height: 100px;
+  font-size: 1rem;
+  margin-top: 5px;
+  border-radius: 10px;
+  
+  border: 1px solid #ccc;}
+
+
 /* End of Product Styling */
 
 /*--------------------------------------------------------------
@@ -91,8 +156,8 @@
 .tprCotainer {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  padding: 15px 0 15px 0;
-  margin: 0 21px;
+  padding: 0px 0 15px 0;
+  margin: 8px 21px;
   gap: 15px;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
