--- a/src/utilities/GlobalUtilities.css
+++ b/src/utilities/GlobalUtilities.css
@@ -24,3 +24,10 @@
 .h-100 { height: 100%; }
 
 .col-gap-10 { column-gap: 10px; }
+.row-gap-10 { row-gap: 5px; }
+
+/* Padding Utilities */
+.p-5 { padding: 5px; }
+.p-10 { padding: 10px; }
+.p-15 { padding: 15px; }
+.p-20 { padding: 20px; }
