--- a/src/components/styles/shopping-cart.css
+++ b/src/components/styles/shopping-cart.css
@@ -214,7 +214,7 @@ column-gap: 8px;  position: absolute;
 }
 
 .cartBtnCont button:hover {
-  color: #ffffff;
+  color: #ecf406;
   opacity: 0.9;
 }
 
