--- a/src/components/dropdown/dropdown.css
+++ b/src/components/dropdown/dropdown.css
@@ -25,8 +25,11 @@
   text-wrap: nowrap;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  font-size: 14px;
   opacity: 0;
   margin-top: 2px;
+  top: 35px;
+  right: 0;
   border-radius: 5px;
   visibility: hidden;
   transition: opacity 0.3s ease, visibility 0s 0.3s;
