--- a/src/components/headerMenu/headerMenu.css
+++ b/src/components/headerMenu/headerMenu.css
@@ -83,7 +83,7 @@ header button {
 }
 
 button.collapsible:hover {
-  background-color: #444;
+  background-color: #ffffff;
 }
 
 .header-dropdown-btn {
@@ -93,11 +93,12 @@ button.collapsible:hover {
   top: 55px;
   right: 15px;
   background-color: #ffffff;
-  min-width: 110px;
+  min-width: 120px;
+  padding: 8px;
   border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transform: translateY(-10px);
-  transition: opacity 0.2s ease, transform 0.1s ease, visibility 0.1s ease;
+  transition: opacity 0.1s ease, transform 0.1s ease, visibility 0.1s ease;
 }
 
 .header-dropdown-btn.show {
@@ -108,13 +109,17 @@ button.collapsible:hover {
 
 .header-dropdown-btn a {
   display: block;
-  padding: 10px;
+  padding: 10px 5px;
   color: rgb(0, 0, 0);
+  font-size: 18px;
   text-decoration: none;
   text-align: center;
 }
 
 .header-dropdown-btn a:hover {
-  background-color: #555;
+  background-color: #ffffff;
+  border-radius: 5px;
+  opacity: 0.8;
+
 }
 
