--- a/src/utilities/GlobalUtilities.css
+++ b/src/utilities/GlobalUtilities.css
@@ -7,9 +7,13 @@
 /* Flexbox Alignment */
 .flex-center { justify-content: center; align-items: center; }
 .flex-between { justify-content: space-between; align-items: center; }
+.flex-end { justify-content: end; align-items: center; }
 .flex-column { flex-direction: column; }
 .flex-row { flex-direction: row; }
 .flex-wrap { flex-wrap: wrap; }
+.flex-align-start { align-items: flex-start; }
+.flex-align-end { align-items: flex-end; }
+.flex-align-center { align-items: center; }
 
 /* Width Utilities */
 .w-25 { width: 25%; }
@@ -24,6 +28,7 @@
 .h-100 { height: 100%; }
 
 .col-gap-10 { column-gap: 10px; }
+.col-gap-5 { column-gap: 5px; }
 .row-gap-10 { row-gap: 5px; }
 
 /* Padding Utilities */
