--- a/src/components/styles/shopping-cart.css
+++ b/src/components/styles/shopping-cart.css
@@ -98,8 +98,8 @@
 .cartCheckbx {
   display: flex;
   align-items: center;
-
-column-gap: 8px;  position: absolute;
+  column-gap: 8px;  
+  position: absolute;
   font-size: 14px;
   top: 15px;
   right: 15px;
