--- a/src/components/styles/shopping-cart.css
+++ b/src/components/styles/shopping-cart.css
@@ -20,6 +20,24 @@
   padding: 15px 0 75px 0;
 }
 
+.AlertinfoBox {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 15px;
+  margin: 8px 21px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.AlertinfoBox p {
+  font-size: clamp(0.9rem, 1.5vw, 1.2rem);
+  font-weight: 500;
+  color: #616161;
+  margin-left: 10px;
+}
+
 @media screen and (min-width: 768px) {
   .cartSection {
     padding: 15px 0 0 0;
