--- a/src/components/headerMenu/headerMenu.css
+++ b/src/components/headerMenu/headerMenu.css
@@ -17,7 +17,8 @@ header {
   z-index: 1;
   flex-direction: row;
   justify-content: space-between;
-  border-radius: 3px;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
   align-items: center;
   background-color: var(--color-bck);
   row-gap: 10px;
